--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "CataComb Bot API",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js",
-    "dev": "nodemon app.js"
+    "start": "node dist/app.js",
+    "dev": "ts-node-dev app.ts",
+    "build": "tsc"
   },
   "author": "",
   "license": "ISC",
@@ -14,6 +15,8 @@
     "mongoose": "^7.4.3"
   },
   "devDependencies": {
+    "typescript": "^5.3.0",
+    "ts-node-dev": "^2.0.0",
     "nodemon": "^3.0.1"
   }
 }
