--- a/package.json
+++ b/package.json
@@ -5,18 +5,19 @@
   "main": "app.js",
   "scripts": {
     "start": "node dist/app.js",
-    "dev": "ts-node-dev app.ts",
-    "build": "tsc"
+    "build": "tsc",
+    "dev": "nodemon --exec ts-node src/app.ts"
   },
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
-    "mongoose": "^7.4.3"
+    "dotenv": "^16.0.0",
+    "mongoose": "^6.0.0",
+    "node-telegram-bot-api": "^0.53.0",
+    "typescript": "^4.5.0"
   },
   "devDependencies": {
-    "typescript": "^5.3.0",
-    "ts-node-dev": "^2.0.0",
-    "nodemon": "^3.0.1"
+    "@types/mongoose": "^5.7.0",
+    "@types/node": "^16.0.0",
+    "nodemon": "^2.0.22",
+    "ts-node": "^10.0.0"
   }
 }
