--- a/package.json
+++ b/package.json
@@ -2,22 +2,31 @@
   "name": "catacomb_bot_api",
   "version": "1.0.0",
   "description": "CataComb Bot API",
-  "main": "app.js",
+  "main": "app.ts",
   "scripts": {
-    "start": "node dist/app.js",
+    "start": "node dist/app.ts",
+    "dev": "ts-node app.ts",
     "build": "tsc",
-    "dev": "nodemon --exec ts-node src/app.ts"
+    "watch": "nodemon app.ts"
   },
   "dependencies": {
-    "dotenv": "^16.0.0",
-    "mongoose": "^6.0.0",
-    "node-telegram-bot-api": "^0.53.0",
-    "typescript": "^4.5.0"
+    "dotenv": "^16.4.5",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^7.0.3",
+    "telegraf": "^4.16.3",
+    "typescript": "^5.0.0"
   },
   "devDependencies": {
-    "@types/mongoose": "^5.7.0",
-    "@types/node": "^16.0.0",
+    "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.8",
+    "@types/node": "^18.7.0",
     "nodemon": "^2.0.22",
-    "ts-node": "^10.0.0"
-  }
+    "ts-node": "^10.9.1"
+  },
+  "engines": {
+    "node": ">=16.0.0"
+  },
+  "author": "Your Name",
+  "license": "MIT"
 }
