--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.3",
+    "node-telegram-bot-api": "^0.66.0",
     "telegraf": "^4.16.3",
     "typescript": "^5.0.0"
   },
