--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^18.7.0",
+    "@types/node-telegram-bot-api": "^0.64.7",
     "nodemon": "^2.0.22",
     "ts-node": "^10.9.1"
   },
