--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.ts",
   "scripts": {
     "start": "node dist/app.ts",
-    "dev": "ts-node app.ts",
+    "dev": "nodemon app.ts",
     "build": "tsc",
     "watch": "nodemon app.ts"
   },
