--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
+    "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.3",
+    "multer": "^1.4.5-lts.1",
     "node-telegram-bot-api": "^0.66.0",
+    "path": "^0.12.7",
     "telegraf": "^4.16.3",
     "typescript": "^5.0.0"
   },
@@ -24,6 +27,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.8",
+    "@types/multer": "^1.4.12",
     "@types/node": "^18.7.0",
     "@types/node-telegram-bot-api": "^0.64.7",
     "nodemon": "^2.0.22",
