--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "watch": "nodemon app.ts"
   },
   "dependencies": {
+    "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
