--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.0",
+    "mime-types": "^2.1.35",
     "mongoose": "^7.0.3",
     "multer": "^1.4.5-lts.1",
     "node-telegram-bot-api": "^0.66.0",
@@ -28,6 +29,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.8",
+    "@types/mime-types": "^2.1.4",
     "@types/multer": "^1.4.12",
     "@types/node": "^18.7.0",
     "@types/node-telegram-bot-api": "^0.64.7",
