--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "watch": "nodemon app.ts"
   },
   "dependencies": {
+    "aws-sdk": "^2.1692.0",
     "axios": "^1.7.9",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
