--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "mime-types": "^2.1.35",
     "mongoose": "^7.0.3",
     "multer": "^1.4.5-lts.1",
+    "node-cron": "^3.0.3",
     "node-telegram-bot-api": "^0.66.0",
     "path": "^0.12.7",
     "telegraf": "^4.16.3",
