--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@types/mime-types": "^2.1.4",
     "@types/multer": "^1.4.12",
     "@types/node": "^18.7.0",
+    "@types/node-cron": "^3.0.11",
     "@types/node-telegram-bot-api": "^0.64.7",
     "nodemon": "^2.0.22",
     "ts-node": "^10.9.1"
